# apache_log_parser_service

./: .env.dev  README.md  docker-compose.dev.yml  main.py  pyproject.toml
app/: .env.dev  configuration.ini  default_data.json
app/aggregator/: admin.py  models.py  signals.py  tasks.py  tests.py  views.py
app/aggregator/api/v1/: serializers.py  urls.py  views.py
app/aggregator/management/commands/: logs.py  parse_logs.py
app/aggregator/migrations/: 0001_initial.py  0002_alter_logfile_file.py  0002_remove_log_u_log_userid_alter_log_agent_and_more.py  0003_alter_log_protocol.py  0004_logfile_testlog.py  0005_alter_logfile_file.py  0006_rename_hyphen_log_indent_rename_referer_log_referrer_and_more.py
app/aggregator/services/: parse_log_files.py  parse_logs.py  parse_save_logs.py  path_log_files.py  re_log.py  read_chunks.py  read_log_file.py
app/aggregator/templates/: main.html
app/src/: settings.py  urls.py  yasg.py
app/src/settings/: __init__.py
app/src/settings/components/: base.py  celery_settings.py  dramatiq_settings.py  logging.py  rest_settings.py
app/src/settings/environments/: development.py  local.py  production.py
ofelia/: config.ini  main.py
temp_logs/: test_parse.py
